--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Blog preview card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -31,7 +31,14 @@
     Coded by <a href="#">Ashish Bisht</a>.
   </div>
   <main>
-    
+    <div class="container">
+      <img class="blog_img" alt="blog_img" src="assets/images/illustration-article.svg">
+      <p id="learning">Learning</p>
+      <p>Published 21 Dec 2023</p>
+      <h2>HTML & CSS foundations</h2>
+      <p>These languages are the backbone of every<br>website, defining structure, content, and <br>presentation.</p>
+      <div class="flexed"><img class="profile_pic" alt="profile_pic" src="assets/images/image-avatar.webp"><span>Ashish Bisht</span></div>
+    </div>
   </main>
 </body>
 </html>
